// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render invalid state 1`] = `
<div
  className="lzhvgp"
/>
`;

exports[`should render invalid state 2`] = `
"
.lzhvgp::before {
  content: \\"\\";
  display: block;
  position: absolute;
  bottom: 100%;
  border-style: solid;
  border-color: transparent;
  left: 4px;
  border-width: 6px;
  border-bottom-color: #bd2527
}


    .lzhvgp::after {
  content: \\"\\";
  display: block;
  position: absolute;
  bottom: 100%;
  border-style: solid;
  border-color: transparent;
  left: 4px;
  border-width: 4px;
  border-bottom-color: #bd2527
}


    .lzhvgp p {
  margin-top: 0px;
  margin-bottom: 0px
}


    .lzhvgp p + p {
  margin-top: 0.5em
}


    .lzhvgp {
  position: relative;
  margin-top: -0.75em;
  padding: 0.5em 1em;
  border: 1px solid  #9f1f21;
  font-size: 0.8em;
  font-weight: 600;
  background: #bd2527;
  color: #fff;
  border-radius: 2px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  -webkit-font-smoothing: antialiased
}"
`;

exports[`should render invalid state with validation errors 1`] = `
<div
  className="lzhvgp"
>
  <p>
    This is required
  </p>
</div>
`;

exports[`should render invalid state with validation errors 2`] = `
"
.lzhvgp::before {
  content: \\"\\";
  display: block;
  position: absolute;
  bottom: 100%;
  border-style: solid;
  border-color: transparent;
  left: 4px;
  border-width: 6px;
  border-bottom-color: #bd2527
}


    .lzhvgp::after {
  content: \\"\\";
  display: block;
  position: absolute;
  bottom: 100%;
  border-style: solid;
  border-color: transparent;
  left: 4px;
  border-width: 4px;
  border-bottom-color: #bd2527
}


    .lzhvgp p {
  margin-top: 0px;
  margin-bottom: 0px
}


    .lzhvgp p + p {
  margin-top: 0.5em
}


    .lzhvgp {
  position: relative;
  margin-top: -0.75em;
  padding: 0.5em 1em;
  border: 1px solid  #9f1f21;
  font-size: 0.8em;
  font-weight: 600;
  background: #bd2527;
  color: #fff;
  border-radius: 2px;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  -webkit-font-smoothing: antialiased
}"
`;
